Coverity analysis defect 152339: Data race condition

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-09-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/catalog/index_builds_manager.cpp:423: MISSING_LOCK 152339 Accessing "this->_builders" without holding lock "mongo::IndexBuildsManager._mutex". Elsewhere, "mongo::IndexBuildsManager._builders" is written to with "IndexBuildsManager._mutex" held 2 out of 2 times.

            Assignee:
            Thomas Goyne
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: