SERVER-109408 Add missing lock in IndexBuildsManager::verifyNoIndexBuilds_forTestOnly (#41041)

GitOrigin-RevId: 31f4414bd9c68a1f8fb1d6aef34e71d6fa32de6c